# SiteDirectory

./: .gitignore  README.md  docker-compose.yml  nginx.conf  package.json  pyproject.toml  requirements.txt
apps/website/: admin.py  apis.py  apps.py  models.py  urls.py  views.py
apps/website/migrations/: 0001_initial.py  0002_category_created_time_category_is_deleted_and_more.py  0003_category_rank_website_rank_alter_website_category_and_more.py
config/: caches.py  settings.py  urls.py
scripts/seed_data/: import_data.py  seed_data.json
static/css/: website_card.css
static/js/: website.js
templates/: _layout.html  private.html  public.html  public_simple.html
templates/_widgets/: website_card.html
utils/: colors.py  network.py
